[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoboltagent"
version = "0.1.0"
description = "AI agent for automatically designing bolts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Sriya"}, {name="Chris McComb", email="ccmcc2012@gmail.com"}]
dependencies = [
    "autobolt @ git+https://github.com/sriyanc2001/AutoBolt.git",
    "smolagents",
    "pandas",
    "numpy",
]
[project.optional-dependencies]
test = [
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]